--- a/src/styles/css/global.css
+++ b/src/styles/css/global.css
@@ -5,5 +5,9 @@
     padding: 0;
     margin: 0;
     font-family: 'Lato', sans-serif;
+    box-sizing: border-box;
+    color: #FCFCFC;
+    transition: all 0.2s;
+    position: relative;
 }
 
